# Stylii

./: README.md  health.sh  notes.txt  start.py  start.sh
backend/: main.py  pyproject.toml  requirements.txt
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/results/: page.tsx
frontend/app/selected-design/: page.tsx
frontend/components/: multi-step-design-form.tsx  top-bar.tsx  upload-dropzone.tsx  video-generation.tsx
frontend/lib/: client.ts  store.ts
frontend/src/app/: page.tsx
frontend/src/app/api/room-tour/: route.ts
img-gen/: main.py  pyproject.toml  test.py
img-gen/tests/: resize_images.py
products/: .gitignore  README.md  requirements.txt
products/amazon/: product_search.py  product_search_gemini_client.py  serp_client.py
products/designer/: README.md  __init__.py  design_critic.py  designer_cli.py  designer_server.py  image_analyzer.py  input_parser.py  product_finder.py
video_gen/: falai.py  main.py  pyproject.toml  requirements.txt  server.py
